# cpp-oop

./: README.md
Arrs/z1/: z1.sln
Arrs/z2/: z2.sln
BigInt/: BigInteger.cpp  BigInteger.h  CMakeLists.txt
Building/: Building.cpp  Building.h  CMakeLists.txt  main.cpp
Car/: CMakeLists.txt  Car.cpp  Car.h  CarDealer.cpp  CarDealer.h  main.cpp
Card/: CMakeLists.txt  main.cpp
Constructors/: CMakeLists.txt  Constructors.cpp  Constructors.h  main.cpp
Dictionary/: z8.sln
Dictionary/z8/: Dictionary.h  WordPair.cpp  WordPair.h  main.cpp
FileCopy/: CMakeLists.txt
FileCopy/FileCopy/: CMakeLists.txt  FileCopy.cpp  FileCopy.h  main.cpp
FileIO/: CMakeLists.txt
FileIO/FileIO/: CMakeLists.txt  HangMan.cpp  HangMan.h  iofuncs.cpp  iofuncs.h  main.cpp
FinalTest/: CMakeLists.txt
FinalTest/FinalTest/: Bus.cpp  Bus.h  CMakeLists.txt  TVehicle.h  Vehicle.cpp  Vehicle.h  main.cpp
Hierarchies/: oop-hierarchies.pptx
KRTest/: CMakeLists.txt
KRTest/KRTest/: CMakeLists.txt  Cookie.cpp  Cookie.h  main.cpp
MathExpressionChecker/: CMakeLists.txt
MathExpressionChecker/MathExpressionChecker/: CMakeLists.txt  MathExpressionChecker.cpp  MathExpressionChecker.h  main.cpp
Money/: Money.cpp  main.cpp
NumberRange/: CMakeLists.txt
NumberRange/NumberRange/: CMakeLists.txt  NumberInt.cpp  NumberInt.h  NumberIntK.cpp  NumberIntK.h  main.cpp
Phone/: CMakeLists.txt
Phone/Phone/: CMakeLists.txt  MobilePhone.cpp  MobilePhone.h  Phone.cpp  Phone.h  SmartPhone.cpp  SmartPhone.h  main.cpp
Point/: Point.cpp  main.cpp  pointArray.h
Product/z6/: main.cpp
Programmer/: CMakeLists.txt  Employee.cpp  Employee.h  Programmer.cpp  Programmer.h  main.cpp
Ristream/: CMakeLists.txt
Ristream/Ristream/: CMakeLists.txt  Ristream.cpp  Ristream.h  Ristream2.cpp  Ristream2.h  main.cpp
Shapes/: ArrRectangle.cpp  ArrRectangle.h  CMakeLists.txt  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Square.cpp  Square.h  main.cpp
StringManip/: CMakeLists.txt
Student/: Student.cpp  Student.h  main.cpp
Tasks/: Tasks.cpp  Tasks.h  main.cpp
Tasks2/: CMakeLists.txt  Tasks.cpp  Tasks.h  main.cpp
TestPrep/: CMakeLists.txt
TestPrep2/: CMakeLists.txt
TestPrep2/TestPrep2/: CEmployee.cpp  CEmployee.h  CMakeLists.txt  CProgrammer.cpp  CProgrammer.h  PTask.cpp  PTask.h  TEmployee.h  main.cpp
TrafficCars/: AirVehicle.cpp  AirVehicle.h  Automobile.cpp  Automobile.h  AutomobileArr.cpp  AutomobileArr.h  CMakeLists.txt  HeavyVehicle.cpp  HeavyVehicle.h  Vehicle.cpp  Vehicle.h  main.cpp
WorkPlace/: CMakeLists.txt  Employee.cpp  Employee.h  Executive.cpp  Executive.h  Manager.cpp  Manager.h  main.cpp
imgCopy/: CMakeLists.txt
imgCopy/imgCopy/: CMakeLists.txt  imgCopy.cpp  imgCopy.h  imgManip.cpp  imgManip.h  main.cpp
l1/z3/: CMakeLists.txt  (+3 more)
simpleTemplates/: CMakeLists.txt
(+133 files in other folders)
