# CMakeList.txt : CMake project for FinalTest, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (FinalTest   "main.cpp" "Vehicle.h" "Vehicle.cpp" "Bus.h" "Bus.cpp" "TVehicle.h")

# TODO: Add tests and install targets if needed.
