# CMakeList.txt : CMake project for MathExpressionChecker, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (MathExpressionChecker "MathExpressionChecker.cpp" "MathExpressionChecker.h" "main.cpp")

# TODO: Add tests and install targets if needed.
