# CMakeList.txt : CMake project for NumberRange, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (NumberRange "NumberInt.cpp" "NumberInt.h" "main.cpp" "NumberIntK.h" "NumberIntK.cpp")

# TODO: Add tests and install targets if needed.
