# CMakeList.txt : CMake project for Phone, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Phone "Phone.cpp" "Phone.h" "main.cpp" "MobilePhone.h" "MobilePhone.cpp" "SmartPhone.h" "SmartPhone.cpp")

# TODO: Add tests and install targets if needed.
