# CMakeList.txt : CMake project for Ristream, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Ristream "Ristream.cpp" "Ristream.h" "main.cpp" "Ristream2.cpp" "Ristream2.h")

# TODO: Add tests and install targets if needed.
