# CMakeList.txt : CMake project for TestPrep2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (TestPrep2   "main.cpp" "CEmployee.h" "CEmployee.cpp" "CProgrammer.h" "CProgrammer.cpp" "PTask.h" "PTask.cpp" "TEmployee.h" )

# TODO: Add tests and install targets if needed.
