# CMakeList.txt : CMake project for imgCopy, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (imgCopy "imgCopy.cpp" "imgCopy.h" "main.cpp" "imgManip.h" "imgManip.cpp")

# TODO: Add tests and install targets if needed.
